@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\net\client.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\graphics\entity.h"
 				>
 			</File>
@@ -252,6 +256,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\input.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\interface\interfacemanager.h"
 				>
 			</File>
 			<File
@@ -284,6 +292,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\utilities\types.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\interface\window.h"
 				>
 			</File>
 		</Filter>
